# proyecto-robotica

./: #lanzar_kyron_web.sh#  .gitignore  README.md  READ_ME.md  activar_robot_real.sh  lanzar_kyron_irl.sh  lanzar_kyron_real.sh  lanzar_kyron_web.sh
src/kyron/: CMakeLists.txt  package.xml
src/kyron/kyron/: CMakeLists.txt  package.xml
src/kyron/kyron_IA/: package.xml  setup.cfg  setup.py
src/kyron/kyron_IA/kyron_IA/: prueba_imagenes.py  prueba_webcam.py  train.py
src/kyron/kyron_ia/: README.md  package.xml  setup.cfg  setup.py  uso_paquete.md
src/kyron/kyron_ia/kyron_ia/: prueba_video.py  transcriber.py  voicecmd.py
src/kyron/kyron_interface/: CMakeLists.txt  package.xml
src/kyron/kyron_interface/msg/: ConteoPersonas.msg  ConteoPersonas2.msg  PersonaIdentificada.msg  RiskDT.msg
src/kyron/kyron_map_server/: package.xml  setup.py
src/kyron/kyron_map_server/launch/: kyron_map_server.launch.py
src/kyron/kyron_mundo/: CMakeLists.txt  package.xml
src/kyron/kyron_mundo/launch/: turtlebot3_hospital.launch.py  vision_test_world.launch.py
src/kyron/kyron_mundo/world/: hospital.world  vision_test.world  vision_test2.world  vision_test3.world
src/kyron/kyron_nav/: README.md  package.xml  setup.cfg  setup.py  waypoints.txt
src/kyron/kyron_nav/config/: kyron_nav_params.yaml  kyron_rviz_config.rviz  mapa_clase.pgm  mapa_clase.yaml
src/kyron/kyron_nav/kyron_nav/: initial_pose_pub.py  kyron_cancel_nav.py  kyron_goal_pub.py  kyron_initial_pose_pub.py  kyron_nav_wf.py
src/kyron/kyron_nav/launch/: kyron_nav.launch.py  kyron_nav_irl.launch.py  kyron_nav_real.launch.py  kyron_nav_rviz.launch.py  kyron_nav_sim.launch.py  kyron_nav_v2.launch.py  kyron_nav_wf.launch.py
src/kyron/kyron_nav_system/: package.xml  setup.cfg  setup.py
src/kyron/kyron_nav_system/config/: kyron_nav_params.yaml
src/kyron/kyron_nav_system/kyron_nav_system/: initial_pose_pub.py  kyron_waypoint_follower.py
src/kyron/kyron_nav_system/launch/: kyron_nav_sim.launch.py  kyron_nav_system.launch.py  kyron_waypoint_follower.launch.py
src/kyron/kyron_ubicacion_robot_en_vivo/: package.xml  setup.py
src/kyron/kyron_vision/: README.md  package.xml  setup.cfg  setup.py
src/kyron/kyron_vision/kyron_vision/: id_cara.py  (+8 more)
src/kyron/launch/: turtlebot3_hospital.launch.py
src/kyron/ubicacion_robot_en_vivo/: setup.cfg
src/kyron/world/: burger.model
(+135 files in other folders)
